# TinyGPT

./: NLP_06.ipynb  README.md  main.py  pyproject.toml
